--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="#" alt="logo">
+        <img src=".." alt="logo">
         <h1>H2O Store</h1>
         <nav>
             <ul>
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="imagem_natacao">
-                    <img src="#" alt="Raviel nadando" class="piscina">
+                    <img src=".." alt="Raviel nadando" class="piscina">
                 </div>
             </section>
     </main>
