Update image source for swimming section

--- a/sobre.html
+++ b/sobre.html
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="imagem_natacao">
-                    <img src=".." alt="Raviel nadando" class="piscina">
+                    <img src="./imagem/raviel.png" alt="Raviel nadando" class="piscina">
                 </div>
             </section>
     </main>
