--- a/feminino.html
+++ b/feminino.html
@@ -10,6 +10,15 @@
     <header>
         <img src="#" alt="logo">
         <h1>H2O Store</h1>
+         <div class= "barra_pesquisa"> <form action= "#" method= "get">
+            <input
+                type="search"
+                id="campo_pesquisa"
+                placeholder="Bucar produtos...">
+                
+            <button type="on-click">🔍︎​</button>
+            </form>
+        
         <nav>
             <ul>
                 <li><a href="index.html" class="item_menu">Pagina Inicial</a></li>
