--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <header>
         <img src="#" alt="logo">
         <h1>H2O Store</h1>
+         <div class= "barra_pesquisa"> <form action= "#" method= "get">
+            <input
+                type="search"
+                id="campo_pesquisa"
+                placeholder="Bucar produtos...">
+                
+            <button type="on-click">🔍︎​</button>
+            </form>
         <nav>
             <ul>
                 <li><a href="feminino.html" class="item_menu">Feminino</a></li>
@@ -160,3 +168,4 @@
 
 </body>
 </html>
+
