--- a/contatos.html
+++ b/contatos.html
@@ -28,6 +28,17 @@
                 <li><a href="sobre.html"class="item_menu">Sobre</a></li>
             </ul>
         </nav>
+           <div class="acoes-usuario">
+
+        <button type="button" class="btn-usuario btn-perfil" id="btn-perfil">
+            👤 <span id="nome-usuario">Perfil</span>
+        </button>
+
+        <button type="button" class="btn-usuario btn-carrinho" id="btn-carrinho">
+            🛒 Carrinho (<span id="contador-carrinho">0</span>)
+        </button>
+
+    </div>
     </header>
     <main>
         <section class="container">
