--- a/feminino.html
+++ b/feminino.html
@@ -29,6 +29,17 @@
                 <li><a href="contatos.html" class="item_menu">Contatos</a></li>
             </ul>
         </nav>
+             <div class="acoes-usuario">
+
+        <button type="button" class="btn-usuario btn-perfil" id="btn-perfil">
+            👤 <span id="nome-usuario">Perfil</span>
+        </button>
+
+        <button type="button" class="btn-usuario btn-carrinho" id="btn-carrinho">
+            🛒 Carrinho (<span id="contador-carrinho">0</span>)
+        </button>
+
+    </div>
     </header>
     <main>
         <h2>Feminino</h2>
