--- a/contatos.html
+++ b/contatos.html
@@ -16,7 +16,7 @@
                 id="campo_pesquisa"
                 placeholder="Bucar produtos...">
                 
-            <button type="on-click">🔍︎​</button>
+            <button type="onClick">🔍︎​</button>
             </form>
         <nav>
             <ul>
@@ -30,11 +30,11 @@
         </nav>
            <div class="acoes-usuario">
 
-        <button type="button" class="btn-usuario btn-perfil" id="btn-perfil">
+        <button type="onClick" class="btn-usuario btn-perfil" id="btn-perfil">
             👤 <span id="nome-usuario">Perfil</span>
         </button>
 
-        <button type="button" class="btn-usuario btn-carrinho" id="btn-carrinho">
+        <button type="onClick" class="btn-usuario btn-carrinho" id="btn-carrinho">
             🛒 Carrinho (<span id="contador-carrinho">0</span>)
         </button>
             </div>
