--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="#" alt="logo">
+        <img src="imagem/logo.png" alt="logo">
         <h1>H2O Store</h1>
          <div class= "barra_pesquisa"> <form action= "#" method= "get">
             <input
@@ -179,5 +179,6 @@
 
 </body>
 </html>
+
 
 
