--- a/sobre.html
+++ b/sobre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src=".." alt="logo">
+        <img src="imagem/logo.png" alt="logo">
         <h1>H2O Store</h1>
         <nav>
             <ul>
