--- a/sobre.html
+++ b/sobre.html
@@ -31,9 +31,9 @@
                     
                     <p>A H2O Store é referência mundial em trajes, acessórios e equipamentos de natação de alta performance. Desde 1973, acompanhamos atletas olímpicos, profissionais e apaixonados pela água em todas as etapas de sua jornada - do primeiro mergulho às maiores conquistas.</p>
 
-                    <p>Nascida da paixão pela natação, a arena desenvolve produtos com tecnologia avançada, design ergonômico e desempenho comprovado. Seja em treinos intensos, competições ou momentos de lazer, nossos trajes de banho, óculos de natação, toucas, mochilas e acessórios são criados para oferecer o máximo em conforto, durabilidade e velocidade.</p>
+                    <p>Nascida da paixão pela natação, a H2O Store desenvolve produtos com tecnologia avançada, design ergonômico e desempenho comprovado. Seja em treinos intensos, competições ou momentos de lazer, nossos trajes de banho, óculos de natação, toucas, mochilas e acessórios são criados para oferecer o máximo em conforto, durabilidade e velocidade.</p>
 
-                    <p>Mais do que uma marca esportiva, a arena representa o espírito da água - sem limites, sem barreiras. Estamos ao lado de quem vive o esporte com intensidade e acredita na superação constante.</p>
+                    <p>Mais do que uma marca esportiva, a H2O Store representa o espírito da água - sem limites, sem barreiras. Estamos ao lado de quem vive o esporte com intensidade e acredita na superação constante.</p>
 
                     <strong>H2O Store. Escolha dos campeões. Escolha de quem ama nadar.</strong>
                 </div>
