--- a/contatos.html
+++ b/contatos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="imagem/logo.png" alt="logo">
+        <img src="imagem/logo.jpg" alt="logo">
         <h1>H2O Store</h1>
         <div class= "barra_pesquisa"> <form action= "#" method= "get">
             <input
