Refactor search bar and user action buttons

--- a/contatos.html
+++ b/contatos.html
@@ -8,16 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="imagem/logo.jpg" alt="logo">
+        <img src="imagem/logo.jpg" alt="logo" class="logo">
         <h1>H2O Store</h1>
-        <div class= "barra_pesquisa"> <form action= "#" method= "get">
-            <input
-                type="search"
-                id="campo_pesquisa"
-                placeholder="Bucar produtos...">
-                
-            <button type="onClick">🔍︎​</button>
-            </form>
         <nav>
             <ul>
                 <li><a href="index.html" class="item_menu">Pagina Inicial</a></li>
@@ -28,16 +20,26 @@
                 <li><a href="sobre.html"class="item_menu">Sobre</a></li>
             </ul>
         </nav>
+        <div class= "barra_pesquisa"> 
+            <form action= "#" method= "get">
+            <input
+                type="search"
+                id="campo_pesquisa"
+                placeholder="Bucar produtos...">
+                
+            <button type="onClick" class="btn-usuario">🔍︎​</button>
+            </form>
+        </div>
            <div class="acoes-usuario">
 
-        <button type="onClick" class="btn-usuario btn-perfil" id="btn-perfil">
+        <button type="onClick" class="btn-usuario" id="btn-perfil">
             👤 <span id="nome-usuario">Perfil</span>
         </button>
 
-        <button type="onClick" class="btn-usuario btn-carrinho" id="btn-carrinho">
-            🛒 Carrinho (<span id="contador-carrinho">0</span>)
+        <button type="onClick" class="btn-usuario" id="btn-carrinho">
+            🛒 Carrinho <span id="contador-carrinho"></span>
         </button>
-            </div>
+            </div> 
     </header>
     <main>
         <section class="container">
