--- a/feminino.html
+++ b/feminino.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="imagem/logo.jpg" alt="logo">
+        <img src="imagem/logo.jpg" alt="logo" class="logo">
         <h1>H2O Store</h1>
          <div class= "barra_pesquisa"> <form action= "#" method= "get">
             <input
@@ -16,7 +16,7 @@
                 id="campo_pesquisa"
                 placeholder="Bucar produtos...">
                 
-            <button type="on-click">🔍︎​</button>
+            <button type="on-click" class="btn-usuario">🔍︎​</button>
             </form>
         
         <nav>
@@ -31,12 +31,12 @@
         </nav>
              <div class="acoes-usuario">
 
-        <button type="button" class="btn-usuario btn-perfil" id="btn-perfil">
+        <button type="button" class="btn-usuario" id="btn-perfil">
             👤 <span id="nome-usuario">Perfil</span>
         </button>
 
-        <button type="button" class="btn-usuario btn-carrinho" id="btn-carrinho">
-            🛒 Carrinho (<span id="contador-carrinho">0</span>)
+        <button type="button" class="btn-usuario" id="btn-carrinho">
+            🛒 Carrinho <span id="contador-carrinho"></span>
         </button>
 
     </div>
