Remove navigation and add logo class

--- a/sobre.html
+++ b/sobre.html
@@ -8,18 +8,14 @@
 </head>
 <body>
     <header>
-        <img src="imagem/logo.jpg" alt="logo">
+        <img src="imagem/logo.jpg" alt="logo" class="logo">
         <h1>H2O Store</h1>
-        <nav>
-            <ul>
                 <li><a href="index.html" class="item_menu">Pagina Inicial</a></li>
                 <li><a href="feminino.html" class="item_menu">Feminino</a></li>
                 <li><a href="masculino.html" class="item_menu">Masculino</a></li>
                 <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
                 <li><a href="infantil.html" class="item_menu">Infantil</a></li>
                 <li><a href="contatos.html" class="item_menu">Contatos</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
             <h2>Sobre a H2O Store</h2>
