--- a/equipamentos.html
+++ b/equipamentos.html
@@ -28,8 +28,17 @@
                 <li><a href="sobre.html" class="item_menu">Sobre</a></li>
                 <li><a href="contatos.html" class="item_menu">Contatos</a></li>
             </ul>
-        </nav>
-             <div class="acoes-usuario">
+            <div class= "barra_pesquisa"> 
+            <form action= "#" method= "get">
+            <input
+                type="search"
+                id="campo_pesquisa"
+                placeholder="Bucar produtos...">
+                
+            <button type="onClick" class="btn-usuario">🔍︎​</button>
+            </form>
+        </div>
+           <div class="acoes-usuario">
 
         <button type="onClick" class="btn-usuario" id="btn-perfil">
             👤 <span id="nome-usuario">Perfil</span>
@@ -38,8 +47,9 @@
         <button type="onClick" class="btn-usuario" id="btn-carrinho">
             🛒 Carrinho <span id="contador-carrinho"></span>
         </button>
+            </div> 
+        </nav>
 
-    </div>
     </header>
     <main>
         <h2>Equipamentos</h2>
