--- a/contatos.html
+++ b/contatos.html
@@ -24,7 +24,7 @@
             <input
                 type="search"
                 id="campo_pesquisa"
-                placeholder="Bucar produtos...">
+                placeholder="Buscar produtos...">
                 
             <button type="onClick" class="btn-usuario">🔍︎​</button>
             </form>
