--- a/sobre.html
+++ b/sobre.html
@@ -7,16 +7,38 @@
     <link rel="stylesheet" href="sobre.css">
 </head>
 <body>
-    <header>
-        <img src="imagem/logo.jpg" alt="logo" class="logo">
+    <header class="header">
+    <div class="header-esquerda">
+        <img src="imagem/logo.jpg" alt="Logo H2O Store" class="logo">
+    </div>
+
+    <div class="header-centro">
         <h1>H2O Store</h1>
-                <li><a href="index.html" class="item_menu">Pagina Inicial</a></li>
-                <li><a href="feminino.html" class="item_menu">Feminino</a></li>
-                <li><a href="masculino.html" class="item_menu">Masculino</a></li>
-                <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
-                <li><a href="infantil.html" class="item_menu">Infantil</a></li>
-                <li><a href="contatos.html" class="item_menu">Contatos</a></li>
-    </header>
+    </div>
+
+    <div class="header-direita">
+        <form class="barra_pesquisa">
+            <input type="search" placeholder="Buscar produtos...">
+            <button class="btn-usuario">🔍</button>
+        </form>
+
+        <div class="acoes-usuario">
+            <button class="btn-usuario">👤 Perfil</button>
+            <button class="btn-usuario">🛒 Carrinho</button>
+        </div>
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="index.html" class="item_menu">Página Inicial</a></li>
+            <li><a href="feminino.html" class="item_menu">Feminino</a></li>
+            <li><a href="masculino.html" class="item_menu">Masculino</a></li>
+            <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
+            <li><a href="infantil.html" class="item_menu">Infantil</a></li>
+            <li><a href="sobre.html" class="item_menu">Sobre</a></li>
+        </ul>
+    </nav>
+</header>
+
     <main>
             <h2>Sobre a H2O Store</h2>
 
