--- a/contatos.html
+++ b/contatos.html
@@ -29,15 +29,16 @@
     </div>
 
     <nav class="menu">
-        <ul>
-            <li><a href="index.html" class="item_menu">Página Inicial</a></li>
-            <li><a href="feminino.html" class="item_menu">Feminino</a></li>
-            <li><a href="masculino.html" class="item_menu">Masculino</a></li>
-            <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
-            <li><a href="infantil.html" class="item_menu">Infantil</a></li>
-            <li><a href="sobre.html" class="item_menu">Sobre</a></li>
-        </ul>
-    </nav>
+    <ul>
+        <li><a href="index.html" class="item_menu">Página Inicial</a></li>
+        <li><a href="feminino.html" class="item_menu">Feminino</a></li>
+        <li><a href="masculino.html" class="item_menu">Masculino</a></li>
+        <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
+        <li><a href="infantil.html" class="item_menu">Infantil</a></li>
+        <li><a href="sobre.html" class="item_menu">Sobre</a></li>
+        <li><a href="contatos.html" class="item_menu">Contatos</a></li> 
+    </ul>
+</nav>
 </header>
 
     <main>
