--- a/masculino.html
+++ b/masculino.html
@@ -27,16 +27,17 @@
             <button class="btn-usuario">🛒 Carrinho</button>
         </div>
     </div>
-    <nav class="menu">
-        <ul>
-            <li><a href="index.html" class="item_menu">Página Inicial</a></li>
-            <li><a href="feminino.html" class="item_menu">Feminino</a></li>
-            <li><a href="masculino.html" class="item_menu">Masculino</a></li>
-            <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
-            <li><a href="infantil.html" class="item_menu">Infantil</a></li>
-            <li><a href="sobre.html" class="item_menu">Sobre</a></li>
-        </ul>
-    </nav>
+    <<nav class="menu">
+    <ul>
+        <li><a href="index.html" class="item_menu">Página Inicial</a></li>
+        <li><a href="feminino.html" class="item_menu">Feminino</a></li>
+        <li><a href="masculino.html" class="item_menu">Masculino</a></li>
+        <li><a href="equipamentos.html" class="item_menu">Equipamentos</a></li>
+        <li><a href="infantil.html" class="item_menu">Infantil</a></li>
+        <li><a href="sobre.html" class="item_menu">Sobre</a></li>
+        <li><a href="contatos.html" class="item_menu">Contatos</a></li> 
+    </ul>
+</nav>
 </header>
 
     <main>
