--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </form>
 
         <div class="acoes-usuario">
-            <button class="btn-usuario">👤 Perfil</button>
-            <button class="btn-usuario">🛒 Carrinho</button>
+            <button class="btn-usuario" onclick="">👤 Perfil</button>
+            <button class="btn-usuario" onclick="">🛒 Carrinho</button>
         </div>
     </div>
     <nav class="menu">
